k8s/k8s/vauban-blog/staging/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vauban-blog-staging
  labels:
    app.kubernetes.io/name: vauban-blog
    app.kubernetes.io/part-of: vauban-blog
    environment: staging
    layer: application
    managed-by: kubectl
    name: vauban-blog-staging
