k8s/k8s/vauban-blog/staging/11-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: vauban-blog-staging
  labels:
    app: vauban-blog
    component: frontend
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: vauban-blog
    component: frontend
